# TCParse

./: .gitignore  README.md  pyproject.toml
src/tcparse/: __init__.py  tcparse.py
tests/: _get_fields.py  test.py
tests/jobs/cis/: geom.xyz  tc.in  tc.json  tc.out
tests/jobs/dipole_deriv/: c2h4.xyz  dipole_deriv.json  dipole_deriv.out  tc.in  tmp.json
tests/jobs/dipole_deriv_cas/: tc.json  tc.out
tests/jobs/dipole_deriv_cis/: tc.in  tc.json  tc.out
tests/jobs/geom_import/: geom.xyz  geom_custom.xyz  tc.in  tc.json  tc.out
tests/jobs/md/: geom.xyz  tc.in  tc.json  tc.out  vels.xyz
tests/jobs/md/scr.geom/: bo.csv  c0  charge.xls  charge_mull.xls  coors.xyz  geom.basis  geom.geometry  log.xls  mullpop  velocities.xyz
