[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "TCParse"
version = "0.1.0"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.1.1",
  "mdanalysis>=2.6"
]
requires-python = ">=3.9"
authors = [
    {name = "Christopher Myers", email = "cmyers7@ucmerced.edu"}
]
# readme = "README.md"
classifiers = [
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Topic :: Libraries :: Python Modules",
  "Development Status :: 4 - Beta"
]

[project.scripts]
tcparse = "tcparse.tcparse:main"

# [tool.setuptools.packages.find]
# where = ["pysces"]
# exclude = ["examples", "debug", "__pycache__"]